--- a/recurrence.cabal
+++ b/recurrence.cabal
@@ -48,6 +48,35 @@ extra-source-files:  README.md
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
 
+executable recurrence
+  -- .hs or .lhs file containing the Main module.
+  main-is:             Main.hs
+
+  ghc-options:         "-with-rtsopts=-p -hc -xc"
+                       -auto-all
+                       -caf-all
+  
+  -- Modules included in this executable, other than Main.
+  other-modules:       Math NeuralNetwork Proofs
+
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:    
+  
+  -- Other library packages from which modules are imported.
+  build-depends:       base >= 4.8 && < 4.10,
+                       fgl >= 5.5.3 && < 5.6,
+                       fgl-visualize >= 0.1.0 && < 0.2,
+                       singletons >= 2.1 && < 2.3,
+                       template-haskell >= 2.10 && < 2.11,
+                       type-level-sets >= 0.5 && < 0.6
+  
+  -- Directories containing source files.
+  hs-source-dirs:      src
+  
+  -- Base language which the package is written in.
+  default-language:    Haskell2010
+
+  default-extensions:  TemplateHaskell 
 
 library
   -- Modules exported by the library.
@@ -64,11 +93,11 @@ library
                        fgl >= 5.5.3 && < 5.6,
                        fgl-visualize >= 0.1.0 && < 0.2,
                        singletons >= 2.1 && < 2.3,
-                       template-haskell >= 2.10 && < 2.11
+                       template-haskell >= 2.10 && < 2.11,
+                       type-level-sets >= 0.5 && < 0.6
   
   -- Directories containing source files.
   hs-source-dirs:      src
   
   -- Base language which the package is written in.
   default-language:    Haskell2010
-  
