--- a/recurrence.cabal
+++ b/recurrence.cabal
@@ -52,9 +52,9 @@ executable recurrence
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
 
-  ghc-options:         "-with-rtsopts=-p -hc -xc"
-                       -auto-all
-                       -caf-all
+--  ghc-options:         "-with-rtsopts=-p -hc -xc"
+--                       -auto-all
+--                       -caf-all
   
   -- Modules included in this executable, other than Main.
   other-modules:       Math NeuralNetwork Proofs
@@ -67,8 +67,10 @@ executable recurrence
                        fgl >= 5.5.3 && < 5.6,
                        fgl-visualize >= 0.1.0 && < 0.2,
                        singletons >= 2.1 && < 2.3,
-                       template-haskell >= 2.10 && < 2.11,
-                       type-level-sets >= 0.5 && < 0.6
+                       template-haskell >= 2.10 && < 2.12,
+                       type-level-sets >= 0.5 && < 0.6,
+                       ad >= 4.3 && < 4.4,
+                       reflection >= 2.1 && < 2.2
   
   -- Directories containing source files.
   hs-source-dirs:      src
@@ -93,8 +95,10 @@ library
                        fgl >= 5.5.3 && < 5.6,
                        fgl-visualize >= 0.1.0 && < 0.2,
                        singletons >= 2.1 && < 2.3,
-                       template-haskell >= 2.10 && < 2.11,
-                       type-level-sets >= 0.5 && < 0.6
+                       template-haskell >= 2.10 && < 2.12,
+                       type-level-sets >= 0.5 && < 0.6,
+                       ad >= 4.3 && < 4.4,
+                       reflection >= 2.1 && < 2.2
   
   -- Directories containing source files.
   hs-source-dirs:      src
