--- a/recurrence.cabal
+++ b/recurrence.cabal
@@ -52,15 +52,14 @@ executable recurrence
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
 
-  ghc-options:
-               --"-with-rtsopts=-p -hc -xc -N"
-                       ---auto-all
-                 --      -threaded
-                  --     -caf-all
-                   --    -O2
+  ghc-options:         "-with-rtsopts=-p -hc -xc -N"
+                       -auto-all
+                       -threaded
+                       -caf-all
+                       -O2
   
   -- Modules included in this executable, other than Main.
-  other-modules:       Math NeuralNetwork Proofs
+  other-modules:       Math NeuralNetwork2 Proofs
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
@@ -74,7 +73,9 @@ executable recurrence
                        type-level-sets >= 0.5 && < 0.6,
                        ad >= 4.3 && < 4.4,
                        reflection >= 2.1 && < 2.2,
-                       accelerate >= 0.15 && < 0.16
+                       accelerate >= 0.15 && < 0.16,
+                       type-list >= 0.5 && < 0.6,
+                       array >= 0.5.1 && < 0.6
   
   -- Directories containing source files.
   hs-source-dirs:      src
@@ -89,7 +90,7 @@ library
   -- exposed-modules:     
   
   -- Modules included in this library but not exported.
-  other-modules:       Math NeuralNetwork Proofs
+  other-modules:       Math NeuralNetwork2 Proofs
   
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
@@ -103,7 +104,9 @@ library
                        type-level-sets >= 0.5 && < 0.6,
                        ad >= 4.3 && < 4.4,
                        reflection >= 2.1 && < 2.2,
-                       accelerate >= 0.15 && < 0.16
+                       accelerate >= 0.15 && < 0.16,
+                       type-list >= 0.5 && < 0.6,
+                       array >= 0.5.1 && < 0.6
   
   -- Directories containing source files.
   hs-source-dirs:      src
