--- a/recurrence.cabal
+++ b/recurrence.cabal
@@ -75,7 +75,8 @@ executable recurrence
                        reflection >= 2.1 && < 2.2,
                        accelerate >= 0.15 && < 0.16,
                        type-list >= 0.5 && < 0.6,
-                       array >= 0.5.1 && < 0.6
+                       array >= 0.5.1 && < 0.6,
+                       type-nat-solver >= 0.1 && < 0.2
   
   -- Directories containing source files.
   hs-source-dirs:      src
@@ -106,7 +107,8 @@ library
                        reflection >= 2.1 && < 2.2,
                        accelerate >= 0.15 && < 0.16,
                        type-list >= 0.5 && < 0.6,
-                       array >= 0.5.1 && < 0.6
+                       array >= 0.5.1 && < 0.6,
+                       type-nat-solver >= 0.1 && < 0.2
   
   -- Directories containing source files.
   hs-source-dirs:      src
