--- a/recurrence.cabal
+++ b/recurrence.cabal
@@ -52,14 +52,14 @@ executable recurrence
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
 
-  ghc-options:         "-with-rtsopts=-p -hc -xc -N"
-                       -auto-all
-                       -threaded
-                       -caf-all
-                       -O2
+--  ghc-options:         "-with-rtsopts=-p -hc -xc -N"
+--                       -auto-all
+--                       -threaded
+--                       -caf-all
+--                       -O2
   
   -- Modules included in this executable, other than Main.
-  other-modules:       Math NeuralNetwork2 Proofs
+  other-modules:       NeuralNetwork2 Helpers
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
@@ -91,7 +91,7 @@ library
   -- exposed-modules:     
   
   -- Modules included in this library but not exported.
-  other-modules:       Math NeuralNetwork2 Proofs
+  other-modules:       NeuralNetwork2 Helpers
   
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
