--- a/recurrence.cabal
+++ b/recurrence.cabal
@@ -74,6 +74,7 @@ executable recurrence
                        ad >= 4.3 && < 4.4,
                        reflection >= 2.1 && < 2.2,
                        accelerate >= 1.0 && < 1.1,
+                       accelerate-llvm-native >= 1.0 && < 1.1,
                        type-list >= 0.5 && < 0.6,
                        array >= 0.5.1 && < 0.6,
                        ghc-typelits-natnormalise >= 0.5.2 && < 0.6
@@ -106,6 +107,8 @@ library
                        ad >= 4.3 && < 4.4,
                        reflection >= 2.1 && < 2.2,
                        accelerate >= 1.0 && < 1.1,
+                       accelerate-llvm-native >= 1.0 && < 1.1,
+                       --accelerate-llvm-ptx >= 1.0 && < 1.1,
                        type-list >= 0.5 && < 0.6,
                        array >= 0.5.1 && < 0.6,
                        ghc-typelits-natnormalise >= 0.5.2 && < 0.6
