--- a/recurrence.cabal
+++ b/recurrence.cabal
@@ -52,7 +52,7 @@ executable recurrence
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
 
-  ghc-options:         "-with-rtsopts=-p -hc -xc -N"
+  ghc-options:         "-with-rtsopts=-p -hc -xc -N -T"
                        -auto-all
                        -threaded
                        -caf-all
@@ -78,7 +78,9 @@ executable recurrence
                        linear-accelerate >= 0.3 && < 0.4,
                        type-list >= 0.5 && < 0.6,
                        array >= 0.5.1 && < 0.6,
-                       ghc-typelits-natnormalise >= 0.5.2 && < 0.6
+                       ghc-typelits-natnormalise >= 0.5.2 && < 0.6,
+                       ekg-core >= 0.1 && < 0.2,
+                       ekg >= 0.4 && < 0.5
   
   -- Directories containing source files.
   hs-source-dirs:      src
