--- a/recurrence.cabal
+++ b/recurrence.cabal
@@ -52,11 +52,11 @@ executable recurrence
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
 
-  ghc-options:         "-with-rtsopts=-p -hc -xc -N -T"
-                       -auto-all
-                       -threaded
-                       -caf-all
-                       -O2
+--  ghc-options:         "-with-rtsopts=-p -hc -xc -N -T"
+--                       -auto-all
+--                       -threaded
+--                       -caf-all
+--                       -O2
   
   -- Modules included in this executable, other than Main.
   other-modules:       NeuralNetwork2 Helpers
